apps/base/logging-loki/deploy/loki/gateway-networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-loki-gateway
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki
      app.kubernetes.io/instance: loki
      app.kubernetes.io/component: gateway

  ingress:
    - ports:
        - port: http-metrics
      from:
        # Allow from grafana
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-grafana
          podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
              app.kubernetes.io/component: grafana

        # Allow from promtail
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: logging-promtail
          podSelector:
            matchLabels:
              app.kubernetes.io/name: promtail
              app.kubernetes.io/instance: promtail
